--- a/style.css
+++ b/style.css
@@ -228,7 +228,11 @@ body{
 /* responsive */
 /* responsive */
 /* responsive */
-
+@media(max-width:992px){
+    .all-collection{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
 @media(max-width:768px) {
     .all-collection{
         grid-template-columns: repeat(2,1fr);
